@@ -1,5 +1,6 @@
 25-Oct-2003 by Matthias Braun
 -removed support for .til files and converted them to .bmp
+-tried to make .pak and .bmp loader endian safe
 
 23-Oct-2003 by Ivo Danihelka
 -implemented respawntype="Random" parameter
